--- a/views/post.ejs
+++ b/views/post.ejs
@@ -18,6 +18,18 @@
               <%= post.publishDate.toISOString().slice(0,10) %>
               <span>--------</span>
               <%= post.publishDate.toISOString().slice(11,19) %></span>
+              <div class="col-xl-4 col-lg-5">
+                <!-- Share box -->
+                <div class="tm-bg-gray tm-share-box">
+                  <div class="text-center">
+                    <a href="/posts/edit/<%= post._id  %>" class="btn btn-primary  mt-5 mb-4 p-3 tm-btn-animate tm-btn-download tm-icon-download"><span>Update Post</span></a>	
+                  </div>	
+                  <div class="text-center">
+                    <a href="/posts/<%= post._id %>?_method=DELETE" class="btn btn-danger mt-2 p-3 tm-btn-animate tm-btn-download tm-icon-download" 
+                      onclick="return confirm('Silmek istediginize emin misiniz?')"><span>Delete Post</span></a>	
+                  </div>								
+                </div>
+              </div>
           </div>
         </div>
       </div>
